--- a/src/view/RegisterClientView.form
+++ b/src/view/RegisterClientView.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JMenuBar" name="jMenuBar1">
 
@@ -134,7 +134,7 @@
                                               </Group>
                                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="jTextBankname" max="32767" attributes="0"/>
+                                                  <Component id="jTextBankname" pref="236" max="32767" attributes="0"/>
                                                   <Component id="jTextIban" max="32767" attributes="0"/>
                                               </Group>
                                           </Group>
@@ -157,7 +157,7 @@
                                           <Component id="jButton2" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <Component id="jBSave" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="jScrollPane1" alignment="1" pref="287" max="32767" attributes="0"/>
+                                      <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                               <Component id="jSeparator1" min="-2" pref="638" max="-2" attributes="0"/>
@@ -255,8 +255,8 @@
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLIban" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextIban" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jBSave" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTextIban" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="19" max="-2" attributes="0"/>
                   <Component id="jSeparator1" min="-2" max="-2" attributes="0"/>
@@ -362,8 +362,6 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextBankname">
-        </Component>
-        <Component class="javax.swing.JTextField" name="jTextIban">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
@@ -510,6 +508,16 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Close"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JFormattedTextField" name="jTextIban">
+          <Properties>
+            <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor" preCode="try {" postCode="} catch (java.text.ParseException ex) {&#xa;ex.printStackTrace();&#xa;}">
+              <Format format="#### #### #### ####" subtype="-1" type="5"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextIbanActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
