--- a/src/view/MediaListView.form
+++ b/src/view/MediaListView.form
@@ -132,17 +132,16 @@
             <Component class="javax.swing.JTable" name="jTableMedia">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="10" rowCount="4">
+                  <Table columnCount="9" rowCount="4">
                     <Column editable="true" title="ID Media:" type="java.lang.Object"/>
-                    <Column editable="true" title="Title:" type="java.lang.Object"/>
-                    <Column editable="true" title="Director:" type="java.lang.Object"/>
-                    <Column editable="true" title="Studio:" type="java.lang.Object"/>
-                    <Column editable="true" title="Band:" type="java.lang.Object"/>
+                    <Column editable="true" title="Title" type="java.lang.Object"/>
                     <Column editable="true" title="Year of Release:" type="java.lang.Object"/>
-                    <Column editable="true" title="Media Format:" type="java.lang.Object"/>
-                    <Column editable="true" title="Avaiability:" type="java.lang.Object"/>
                     <Column editable="true" title="Price:" type="java.lang.Object"/>
+                    <Column editable="true" title="Rented of days:" type="java.lang.Object"/>
+                    <Column editable="true" title="Avaiability:" type="java.lang.Object"/>
+                    <Column editable="true" title="Media Format:" type="java.lang.Object"/>
                     <Column editable="true" title="Description:" type="java.lang.Object"/>
+                    <Column editable="true" title="Director/Studio/Band:" type="java.lang.Object"/>
                   </Table>
                 </Property>
               </Properties>
